package cothority;

import "status.proto";

message StatusResponse {
    map<string, cothority.Status> system = 1;
}