message FinalizeRequest {
    optional bytes descId = 1;
    optional bytes attendees = 2;
}