message FinalizeResponse {
    optional FinalStatement final = 1;
}