message StoreConfigReply {
    optional bytes id = 1;
}