message StoreConfig {
    optional PopDesc desc = 1;
}